// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Runnable should error 1`] = `
Result {
  "internalMessages": Array [
    "Error: Fatal error",
  ],
  "internalStatus": 2,
}
`;

exports[`Runnable should fail 1`] = `
Result {
  "internalMessages": Array [
    "ExpectError: Expect failed",
  ],
  "internalStatus": 1,
}
`;

exports[`Runnable should run 1`] = `
Result {
  "internalMessages": Array [],
  "internalStatus": 0,
}
`;

exports[`Runnable should run asynchronously 1`] = `
Result {
  "internalMessages": Array [],
  "internalStatus": 0,
}
`;

exports[`Runnable should skip 1`] = `
Result {
  "internalMessages": Array [],
  "internalStatus": 3,
}
`;
